ASSERTION FAILURE: [[videoLayer delegate] isKindOfClass:getUIViewClass()] in WebAVPlayerLayerView_videoView() https://bugs.webkit.org/show_bug.cgi?id=160433

Reviewed by Eric Carlson.

Source/WebCore:

Early return from WebAVPlayerLayerView_videoView() if the PiP layer does not have a non-nil delegate view.

Test: media/controls/close-page-with-picture-in-picture-video-assertion-failure.html

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebAVPlayerLayerView_videoView):

LayoutTests:

Add a layout test to ensure that we do not cause an assertion failure when exiting PiP by closing the tab.

* TestExpectations: Skip media/control/ipad tests on all ports. We will re-enable these tests for iOS.
* media/controls/close-page-with-picture-in-picture-video-assertion-failure-expected.txt: Added.
* media/controls/close-page-with-picture-in-picture-video-assertion-failure.html: Added.
* media/controls/resources/picture-in-picture.html: Added.
* platform/ios-simulator/TestExpectations: Mark tests media/control/ipad  as Pass so that we run them
in the iPad simulator.

Canonical link: https://commits.webkit.org/178988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204492 268f45cc-cd09-0410-ab3c-d52691b4dbfc